Remove inconsistency of guage/gauge. #1

--- a/templates/analyze-gauge.html.twig
+++ b/templates/analyze-gauge.html.twig
@@ -1,6 +1,6 @@
 {# templates/analyze-gauge.html.twig #}
 
-{% embed 'analyze:guage' with {
+{% embed 'analyze:gauge' with {
     caption: caption,
     range_min_label: range_min_label,
     range_mid_label: range_mid_label,
