--- a/templates/analyze-table.html.twig
+++ b/templates/analyze-table.html.twig
@@ -2,8 +2,6 @@
 
 {% embed 'analyze:table' with {
     table_title: table_title,
-    row_one: row_one,
-    row_two: row_two,
-    row_three: row_three,
+    rows: rows,
 } %}
 {% endembed %}
